--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -31,3 +31,10 @@
 <script type="text/javascript" async
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
+
+<h1 class="post-title">
+  {% if page.image %}
+    <img src="{{ page.image | relative_url }}" alt="{{ page.title }}" class="post-title-image">
+  {% endif %}
+  {{ page.title }}
+</h1>
