update image post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,16 +6,6 @@
   </h1>
   
 
-  <style>
-    .post-title {
-      display: flex;
-      align-items: center;
-      gap: 10px;  /* Space between image and title */
-    }
-    .post-title img {
-      width: 30px;   /* Adjust size as needed */
-      height: auto;
-      border-radius: 50%; /* Optional: Makes the image round */
-    }
-  </style>
+  {% include custom-styles.html %}
+
   
