--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,7 @@
   </h1>
   
 
-  {% include custom-styles.html %}
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/custom.css">
+
 
   
