--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,12 +1,12 @@
-<h1 class="post-title">
-    {% if page.image %}
-      <img src="{{ page.image | relative_url }}" alt="{{ page.title }}" class="post-title-image">
-    {% endif %}
-    {{ page.title }}
-  </h1>
-  
+---
+layout: default
+---
+<h1>{{ page.title }}</h1>
 
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/custom.css">
-
-
-  
+<ul>
+{% for post in site.posts %}
+  <li>
+    <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+  </li>
+{% endfor %}
+</ul>
