--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -29,5 +29,5 @@
 
 <!-- Mathjax Support -->
 <script type="text/javascript" async
-  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
 </script>
